--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 DISCORD_CLIENT_ID=1355819691528159335
 DISCORD_CLIENT_SECRET=ZluOHMi8Y2cxNrYiP73zTU9dSP-SF_Yg
 NEXTAUTH_URL=https://tailquest.vercel.app
+NEXTAUTH_SECRET=5598405c66db9a955fb9afbecf8bf54e
